# Thorp

./: .gitignore  AGENTS.md  Estratégias.xlsx  Historico_AMOSTRA.csv  README.md  pyproject.toml  requirements.txt  thorp-concept.md  thorp-engineering.md  thorp-sensei.md  thorp-stack.md
broker/: base.py  mt5_broker.py  simulated.py
core/: analisador.py  calibrator.py  containers.py  data.py  dia_anterior.py  mt5_connector.py  persistence.py  risk_guardian.py  trade_store.py  types.py
execution/: config.py  engine.py  manager.py  slippage.py
feed/: base.py  csv_feed.py  mt5_feed.py
hipoteses/: CATALOGO.json  QUASE.json
principios/: contrato-broker.md  contrato-core.md  contrato-engine-config.md  contrato-engine.md  contrato-feed.md  contrato-order-lifecycle.md  contrato-package.md  contrato-persistence.md  contrato-risk-guardian.md  ea-checklist.md  sl-tp.md
radiografia/: 01_forma_distribuicao.txt  02_dependencia_temporal.txt  03_perfil_ciclico.txt  04_relacoes_variaveis.txt  05_caudas_extremos.txt  06_microestrutura.txt  checklist_6_familias.txt  checklist_validacao.txt  estatisticas_retornos.txt  metodo_pipeline.txt  range_volume_por_hora.txt
scripts/: CATALOGO.md  _comparar_bt.py  adversario_markov.py  analisar_mfe.py  avaliar_hipotese.py  batch_screening_markov.py  busca_combinatoria.py  check_mt5.py  comparar_bt_demo.py  comparar_execucao.py  features_markov.py  hmm_todos_minutos.py  minerar_markov.py  minerar_markov_v2.py  monitor_posicoes.py  payoff_table.py  pipe_completo.py  pipeline.py  radiografia_h140.py  run_bateria.py  run_bot.py  run_demo.py  (+7 more)
(+121 files in other folders)
