[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "thorp"
version = "0.2.0"
requires-python = ">=3.10"
dependencies = [
    "pandas>=1.5",
    "numpy>=1.24",
    "scipy>=1.10",
]

[tool.setuptools.packages.find]
include = ["core*", "execution*", "broker*", "feed*", "strategy*", "scripts*"]
